# face_recognition_ros2

./: .gitignore  README.md  requirements.txt  setup_workspace.sh
src/face_recognition_pkg/: install.sh  package.xml  setup.py
src/face_recognition_pkg/face_recognition_pkg/: face_recognition_node.py
src/face_recognition_pkg/face_recognition_pkg/scripts/: run_node.py  run_node.sh
src/face_recognition_pkg/face_recognition_pkg/utils/: data_collector.py  face_detector.py  face_recognizer.py
src/face_recognition_pkg/launch/: face_recognition.launch.py
src/face_recognition_pkg/scripts/: run_node.sh
